--- a/data_process.ipynb
+++ b/data_process.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
     "import json"
